// Package resource - æ ¸å¿ƒå­˜å‚¨å®ç°
//
// ğŸ¯ **èµ„æºå­˜å‚¨æ ¸å¿ƒé€»è¾‘ (Resource Storage Core Logic)**
//
// æœ¬æ–‡ä»¶å®ç°èµ„æºå­˜å‚¨çš„æ ¸å¿ƒåŠŸèƒ½ï¼š
// - æ··åˆå­˜å‚¨ï¼šFileStore(æ–‡ä»¶) + BadgerStore(ç´¢å¼•) åŒå†™æœºåˆ¶
// - å†…å®¹å¯»å€ï¼šåŸºäºSHA-256å“ˆå¸Œçš„å»é‡å­˜å‚¨
// - äº‹åŠ¡ä¸€è‡´æ€§ï¼šæ–‡ä»¶å­˜å‚¨ä¸ç´¢å¼•æ›´æ–°çš„åŸå­æ€§
// - æµå¼å¤„ç†ï¼šæ”¯æŒå¤§æ–‡ä»¶çš„æµå¼å“ˆå¸Œè®¡ç®—
// - åˆ†å±‚å­˜å‚¨ï¼šcategory/hash[0:2]/hash çš„ç›®å½•ç»“æ„
package resource

import (
	"context"
	"crypto/sha256"
	"encoding/hex"
	"fmt"
	"io"
	"os"
	"path/filepath"
	"strings"
	"time"

	"github.com/weisyn/v1/pkg/interfaces/infrastructure/storage"
	"github.com/weisyn/v1/pkg/types"
)

// ============================================================================
//                              å­˜å‚¨é”®å®šä¹‰
// ============================================================================

const (
	// èµ„æºå…ƒæ•°æ®é”®å‰ç¼€
	resourceMetaPrefix = "resource:meta:"
	// èµ„æºè·¯å¾„æ˜ å°„é”®å‰ç¼€
	resourcePathPrefix = "resource:path:"
	// èµ„æºå¼•ç”¨è®¡æ•°é”®å‰ç¼€
	resourceRefsPrefix = "resource:refs:"
)

// ============================================================================
//                            ğŸ¯ ç»Ÿä¸€æ–‡ä»¶å­˜å‚¨å®ç°
// ============================================================================

// storeResourceFile ç»Ÿä¸€æ–‡ä»¶å­˜å‚¨å®ç°
//
// ğŸ¯ **çº¯æ–‡ä»¶æ“ä½œçš„ç»Ÿä¸€å­˜å‚¨æ–¹æ³•**
//
// åŸºäº"æ–‡ä»¶åˆ°æ–‡ä»¶"çš„ç®€å•ç†å¿µï¼Œç»Ÿä¸€å¤„ç†æ‰€æœ‰å¤§å°çš„æ–‡ä»¶ã€‚
// é¿å…ä¸´æ—¶æ–‡ä»¶ã€å†…å­˜åŠ è½½ã€å¤§å°åˆ¤æ–­ç­‰å¤æ‚é€»è¾‘ã€‚
//
// ğŸ“‹ **å¤„ç†æµç¨‹**ï¼š
//  1. æ‰“å¼€æºæ–‡ä»¶ï¼Œæµå¼è®¡ç®—SHA-256å“ˆå¸Œ
//  2. æ£€æŸ¥å†…å®¹å»é‡ï¼ˆç›¸åŒå“ˆå¸Œåªå­˜å‚¨ä¸€æ¬¡ï¼‰
//  3. ç³»ç»Ÿçº§æ–‡ä»¶æ‹·è´åˆ°ç›®æ ‡è·¯å¾„
//  4. äº‹åŠ¡æ€§æ›´æ–°ç´¢å¼•å…ƒæ•°æ®
//
// ğŸ’¡ **æŠ€æœ¯ç‰¹ç‚¹**ï¼š
//   - ğŸ¯ ç»Ÿä¸€å¤„ç†ï¼šæ‰€æœ‰æ–‡ä»¶ç”¨åŒä¸€å¥—é€»è¾‘
//   - âš¡ é«˜æ€§èƒ½ï¼šä¸€æ¬¡æµå¼è¯»å–è®¡ç®—å“ˆå¸Œ
//   - ğŸ”’ åŸå­æ“ä½œï¼šæ–‡ä»¶æ‹·è´ + äº‹åŠ¡ç´¢å¼•æ›´æ–°
//   - ğŸ§  å†…å­˜é«˜æ•ˆï¼šæµå¼æ“ä½œï¼Œå†…å­˜å ç”¨æ’å®š
func (m *Manager) storeResourceFile(ctx context.Context, sourceFilePath string, metadata map[string]string) ([]byte, error) {
	// 1. æ£€æŸ¥æºæ–‡ä»¶æ˜¯å¦å­˜åœ¨
	sourceInfo, err := os.Stat(sourceFilePath)
	if err != nil {
		return nil, fmt.Errorf("æºæ–‡ä»¶ä¸å­˜åœ¨æˆ–ä¸å¯è®¿é—®: %w", err)
	}

	// 2. æ‰“å¼€æºæ–‡ä»¶å¹¶è®¡ç®—å“ˆå¸Œ
	sourceFile, err := os.Open(sourceFilePath)
	if err != nil {
		return nil, fmt.Errorf("æ‰“å¼€æºæ–‡ä»¶å¤±è´¥: %w", err)
	}
	defer sourceFile.Close()

	// 3. æµå¼è®¡ç®—SHA-256å“ˆå¸Œ
	hasher := sha256.New()
	_, err = io.Copy(hasher, sourceFile)
	if err != nil {
		return nil, fmt.Errorf("è®¡ç®—æ–‡ä»¶å“ˆå¸Œå¤±è´¥: %w", err)
	}
	contentHash := hasher.Sum(nil)
	contentHashHex := hex.EncodeToString(contentHash)

	if m.logger != nil {
		m.logger.Debugf("æ–‡ä»¶å“ˆå¸Œ: %s, æºè·¯å¾„: %s, å¤§å°: %d", contentHashHex, sourceFilePath, sourceInfo.Size())
	}

	// 4. æ£€æŸ¥å»é‡
	metaKey := resourceMetaPrefix + contentHashHex
	exists, err := m.badgerStore.Exists(ctx, []byte(metaKey))
	if err != nil {
		return nil, fmt.Errorf("æ£€æŸ¥èµ„æºå­˜åœ¨æ€§å¤±è´¥: %w", err)
	}

	if exists {
		if m.logger != nil {
			m.logger.Debugf("èµ„æºå·²å­˜åœ¨ï¼Œè·³è¿‡å­˜å‚¨: %s", contentHashHex)
		}
		// èµ„æºå·²å­˜åœ¨ï¼Œä»…æ›´æ–°å¼•ç”¨è®¡æ•°
		if err := m.IncrementResourceReference(ctx, contentHash); err != nil {
			if m.logger != nil {
				m.logger.Warnf("æ›´æ–°å¼•ç”¨è®¡æ•°å¤±è´¥: %v", err)
			}
		}
		return contentHash, nil
	}

	// 5. æ„å»ºç›®æ ‡å­˜å‚¨è·¯å¾„
	targetPath := m.buildHashBasedPath(contentHash)
	fullTargetPath := m.buildResourcePath(targetPath)

	// 6. é€šè¿‡FileStoreæ¥å£å¤åˆ¶æ–‡ä»¶åˆ°ç›®æ ‡ä½ç½®
	if err := m.copyFileViaFileStore(ctx, sourceFilePath, fullTargetPath); err != nil {
		return nil, fmt.Errorf("å¤åˆ¶æ–‡ä»¶å¤±è´¥: %w", err)
	}

	// 7. äº‹åŠ¡æ€§æ›´æ–°ç´¢å¼•
	txErr := m.badgerStore.RunInTransaction(ctx, func(tx storage.BadgerTransaction) error {
		// å°†å­˜å‚¨è·¯å¾„æ·»åŠ åˆ°å…ƒæ•°æ®ä¸­
		if metadata == nil {
			metadata = make(map[string]string)
		}
		metadata["storage_path"] = targetPath // ç›¸å¯¹äºèµ„æºåŸºç¡€è·¯å¾„çš„å­˜å‚¨è·¯å¾„

		// æ„å»ºèµ„æºå­˜å‚¨ä¿¡æ¯
		resourceInfo := &types.ResourceStorageInfo{
			ResourcePath:   filepath.Base(sourceFilePath), // åŸå§‹æ–‡ä»¶åä½œä¸ºèµ„æºè·¯å¾„
			ResourceType:   m.extractResourceType(metadata),
			ContentHash:    contentHash,
			Size:           sourceInfo.Size(),
			StoredAt:       time.Now().Unix(),
			Metadata:       metadata,
			IsAvailable:    true,
			StorageBackend: "file",
		}

		// åºåˆ—åŒ–èµ„æºä¿¡æ¯
		metaData, err := m.serializeResourceInfo(resourceInfo)
		if err != nil {
			return fmt.Errorf("åºåˆ—åŒ–èµ„æºå…ƒæ•°æ®å¤±è´¥: %w", err)
		}

		// å­˜å‚¨èµ„æºå…ƒæ•°æ®
		if err := tx.Set([]byte(metaKey), metaData); err != nil {
			return fmt.Errorf("å­˜å‚¨èµ„æºå…ƒæ•°æ®å¤±è´¥: %w", err)
		}

		// æ›´æ–°åˆ†ç±»ç´¢å¼•
		resourceType := resourceInfo.ResourceType
		if resourceType != "" {
			if err := m.updateCategoryIndexInTx(tx, resourceType, contentHashHex); err != nil {
				return fmt.Errorf("æ›´æ–°åˆ†ç±»ç´¢å¼•å¤±è´¥: %w", err)
			}
		}

		// åˆå§‹åŒ–å¼•ç”¨è®¡æ•°
		refsKey := resourceRefsPrefix + contentHashHex
		if err := tx.Set([]byte(refsKey), []byte("1")); err != nil {
			return fmt.Errorf("åˆå§‹åŒ–å¼•ç”¨è®¡æ•°å¤±è´¥: %w", err)
		}

		return nil
	})

	// 8. äº‹åŠ¡å¤±è´¥æ—¶æ¸…ç†æ–‡ä»¶
	if txErr != nil {
		if cleanupErr := m.fileStore.Delete(ctx, fullTargetPath); cleanupErr != nil {
			if m.logger != nil {
				m.logger.Warnf("æ¸…ç†æ–‡ä»¶å¤±è´¥: %s, é”™è¯¯: %v", fullTargetPath, cleanupErr)
			}
		}
		return nil, txErr
	}

	if m.logger != nil {
		m.logger.Debugf("âœ… æ–‡ä»¶å­˜å‚¨å®Œæˆ: %s -> %s", sourceFilePath, contentHashHex)
	}

	return contentHash, nil
}

// copyFileViaFileStore é€šè¿‡FileStoreæ¥å£è¿›è¡Œæ–‡ä»¶æ‹·è´
//
// ğŸ—ï¸ **æ¶æ„åˆè§„çš„æ–‡ä»¶æ“ä½œ**ï¼š
//   - å®Œå…¨é€šè¿‡FileStoreæ¥å£æ“ä½œæ–‡ä»¶
//   - ä¸ç›´æ¥ä½¿ç”¨osåŒ…è¿›è¡Œæ–‡ä»¶ç³»ç»Ÿæ“ä½œ
//   - éµå¾ªåˆ†å±‚æ¶æ„åŸåˆ™
func (m *Manager) copyFileViaFileStore(ctx context.Context, sourcePath, targetPath string) error {
	// è¯»å–æºæ–‡ä»¶å†…å®¹
	data, err := os.ReadFile(sourcePath)
	if err != nil {
		return fmt.Errorf("è¯»å–æºæ–‡ä»¶å¤±è´¥: %w", err)
	}

	// é€šè¿‡FileStoreæ¥å£ä¿å­˜åˆ°ç›®æ ‡ä½ç½®
	if err := m.fileStore.Save(ctx, targetPath, data); err != nil {
		return fmt.Errorf("é€šè¿‡FileStoreä¿å­˜æ–‡ä»¶å¤±è´¥: %w", err)
	}

	return nil
}

// buildHashBasedPath æ„å»ºåŸºäºå“ˆå¸Œçš„å­˜å‚¨è·¯å¾„
func (m *Manager) buildHashBasedPath(contentHash []byte) string {
	hashHex := hex.EncodeToString(contentHash)
	// ä½¿ç”¨å“ˆå¸Œå‰2å­—ç¬¦ä½œä¸ºå­ç›®å½•ï¼Œæé«˜æ–‡ä»¶ç³»ç»Ÿæ€§èƒ½
	return filepath.Join(hashHex[:2], hashHex)
}

// extractResourceType ä»å…ƒæ•°æ®ä¸­æå–èµ„æºç±»å‹
func (m *Manager) extractResourceType(metadata map[string]string) string {
	if resourceType, exists := metadata["resource_type"]; exists {
		return resourceType
	}
	// é»˜è®¤ç±»å‹
	return "unknown"
}

// updateCategoryIndexInTx åœ¨äº‹åŠ¡ä¸­æ›´æ–°åˆ†ç±»ç´¢å¼•
func (m *Manager) updateCategoryIndexInTx(tx storage.BadgerTransaction, resourceType string, contentHashHex string) error {
	// ç®€åŒ–å®ç°ï¼šå°†å“ˆå¸Œæ·»åŠ åˆ°ç±»å‹ç´¢å¼•ä¸­
	categoryKey := "category:" + resourceType
	hashList, _ := tx.Get([]byte(categoryKey))

	// ç®€å•è¿½åŠ ï¼Œå®é™…å®ç°åº”è¯¥æ£€æŸ¥é‡å¤
	newHashList := string(hashList) + "," + contentHashHex
	return tx.Set([]byte(categoryKey), []byte(newHashList))
}

// ============================================================================
//                            ğŸ”§ è¾…åŠ©æ–¹æ³•
// ============================================================================

// storeResource å­˜å‚¨èµ„æºæ–‡ä»¶åŠå…¶å…ƒæ•°æ®
//
// ğŸ—ï¸ **æ··åˆå­˜å‚¨äº‹åŠ¡æµç¨‹ (Hybrid Storage Transaction Flow)**
//
// è¿™æ˜¯æ ‡å‡†èµ„æºå­˜å‚¨çš„æ ¸å¿ƒå®ç°ï¼Œé‡‡ç”¨FileStore+BadgerStoreæ··åˆå­˜å‚¨æ¶æ„ã€‚
// é€šè¿‡äº‹åŠ¡æœºåˆ¶ç¡®ä¿æ–‡ä»¶å­˜å‚¨å’Œç´¢å¼•æ›´æ–°çš„åŸå­æ€§ï¼Œé˜²æ­¢æ•°æ®ä¸ä¸€è‡´ã€‚
//
// ğŸ“‹ **è¯¦ç»†å¤„ç†æµç¨‹**ï¼š
//
//	1ï¸âƒ£ **å“ˆå¸Œè®¡ç®—é˜¶æ®µ**ï¼š
//	   â€¢ å¯¹æ–‡ä»¶å†…å®¹è®¡ç®—SHA-256å“ˆå¸Œ
//	   â€¢ å“ˆå¸Œå€¼ä½œä¸ºèµ„æºçš„å”¯ä¸€æ ‡è¯†ç¬¦
//	   â€¢ è®°å½•è°ƒè¯•æ—¥å¿—ï¼ˆèµ„æºè·¯å¾„+å“ˆå¸Œå€¼ï¼‰
//
//	2ï¸âƒ£ **å»é‡æ£€æŸ¥é˜¶æ®µ**ï¼š
//	   â€¢ æ ¹æ®å“ˆå¸Œå€¼æ£€æŸ¥èµ„æºæ˜¯å¦å·²å­˜åœ¨
//	   â€¢ å¦‚å·²å­˜åœ¨ï¼šä»…å¢åŠ å¼•ç”¨è®¡æ•°ï¼Œè·³è¿‡å­˜å‚¨
//	   â€¢ å¦‚ä¸å­˜åœ¨ï¼šç»§ç»­æ‰§è¡Œå­˜å‚¨æµç¨‹
//
//	3ï¸âƒ£ **æ–‡ä»¶å­˜å‚¨é˜¶æ®µ**ï¼š
//	   â€¢ æ„å»ºåˆ†å±‚å­˜å‚¨è·¯å¾„ï¼ˆcategory/hash[0:2]/hashï¼‰
//	   â€¢ å°†æ–‡ä»¶ä¿å­˜åˆ°FileStore
//	   â€¢ ä½¿ç”¨ç»Ÿä¸€è·¯å¾„å¤„ç†å‡½æ•°ç¡®ä¿è·¯å¾„ä¸€è‡´æ€§
//
//	4ï¸âƒ£ **äº‹åŠ¡ç´¢å¼•é˜¶æ®µ**ï¼š
//	   â€¢ åœ¨BadgerDBäº‹åŠ¡ä¸­åŸå­æ€§æ‰§è¡Œï¼š
//	     - å†™å…¥èµ„æºå…ƒæ•°æ®ï¼ˆåºåˆ—åŒ–çš„ResourceStorageInfoï¼‰
//	     - å»ºç«‹å“ˆå¸Œâ†’è·¯å¾„æ˜ å°„ï¼ˆç”¨äºå¿«é€Ÿå®šä½æ–‡ä»¶ï¼‰
//	     - åˆå§‹åŒ–å¼•ç”¨è®¡æ•°ï¼ˆè®¾ç½®ä¸º1ï¼‰
//	     - æ›´æ–°åˆ†ç±»ç´¢å¼•ï¼ˆä½¿ç”¨v2å¹¶å‘ä¼˜åŒ–ç‰ˆæœ¬ï¼‰
//	     - æ›´æ–°åˆ›å»ºè€…ç´¢å¼•ï¼ˆå¦‚æœæœ‰åˆ›å»ºè€…ä¿¡æ¯ï¼‰
//	     - æ›´æ–°åç§°ç´¢å¼•ï¼ˆå¦‚æœæœ‰åç§°ä¿¡æ¯ï¼‰
//
//	5ï¸âƒ£ **å¼‚å¸¸å¤„ç†é˜¶æ®µ**ï¼š
//	   â€¢ å¦‚æœäº‹åŠ¡å¤±è´¥ï¼Œè‡ªåŠ¨æ¸…ç†å·²å­˜å‚¨çš„æ–‡ä»¶
//	   â€¢ é˜²æ­¢å­¤å„¿æ–‡ä»¶çš„äº§ç”Ÿ
//	   â€¢ è®°å½•æ¸…ç†å¤±è´¥çš„è­¦å‘Šæ—¥å¿—
//
// ğŸ”’ **äº‹åŠ¡å®‰å…¨ä¿è¯**ï¼š
//   - æ–‡ä»¶å­˜å‚¨åœ¨äº‹åŠ¡å¤–æ‰§è¡Œï¼Œå‡å°‘äº‹åŠ¡é”å®šæ—¶é—´
//   - ç´¢å¼•æ›´æ–°åœ¨äº‹åŠ¡å†…æ‰§è¡Œï¼Œç¡®ä¿åŸå­æ€§
//   - å¼‚å¸¸æ—¶è‡ªåŠ¨å›æ»šï¼Œä¿æŒæ•°æ®ä¸€è‡´æ€§
//
// âš¡ **æ€§èƒ½ä¼˜åŒ–ç‰¹æ€§**ï¼š
//   - åŸºäºå“ˆå¸Œçš„å»é‡ï¼Œé¿å…é‡å¤å­˜å‚¨
//   - åˆ†å±‚ç›®å½•ç»“æ„ï¼Œæå‡æ–‡ä»¶ç³»ç»Ÿæ€§èƒ½
//   - v2ç´¢å¼•è®¾è®¡ï¼Œæ”¯æŒé«˜å¹¶å‘æ“ä½œ
func (m *Manager) storeResource(ctx context.Context, resourcePath string, content []byte, metadata map[string]string) error {
	// 1. è®¡ç®—èµ„æºå†…å®¹å“ˆå¸Œ
	hasher := sha256.New()
	hasher.Write(content)
	contentHash := hasher.Sum(nil)
	contentHashHex := hex.EncodeToString(contentHash)

	if m.logger != nil {
		m.logger.Debugf("èµ„æºå“ˆå¸Œ: %s, è·¯å¾„: %s", contentHashHex, resourcePath)
	}

	// 2. æ£€æŸ¥èµ„æºæ˜¯å¦å·²å­˜åœ¨ï¼ˆå»é‡ï¼‰
	metaKey := resourceMetaPrefix + contentHashHex
	exists, err := m.badgerStore.Exists(ctx, []byte(metaKey))
	if err != nil {
		return fmt.Errorf("æ£€æŸ¥èµ„æºå­˜åœ¨æ€§å¤±è´¥: %w", err)
	}

	if exists {
		if m.logger != nil {
			m.logger.Debugf("èµ„æºå·²å­˜åœ¨ï¼Œè·³è¿‡å­˜å‚¨: %s", contentHashHex)
		}
		// èµ„æºå·²å­˜åœ¨ï¼Œä»…æ›´æ–°å¼•ç”¨è®¡æ•°
		return m.IncrementResourceReference(ctx, contentHash)
	}

	// 3. æ„å»ºåˆ†å±‚å­˜å‚¨è·¯å¾„
	storagePath := m.buildStoragePath(contentHash, resourcePath)

	// 4. å­˜å‚¨æ–‡ä»¶åˆ°FileStoreï¼ˆåœ¨äº‹åŠ¡å¤–ï¼Œé¿å…é•¿æ—¶é—´é”å®šï¼‰
	fullStoragePath := m.buildResourcePath(storagePath)
	if err := m.fileStore.Save(ctx, fullStoragePath, content); err != nil {
		return fmt.Errorf("å­˜å‚¨æ–‡ä»¶å¤±è´¥: %w", err)
	}

	// 5. åœ¨äº‹åŠ¡ä¸­æ‰§è¡Œç´¢å¼•æ“ä½œ
	txErr := m.badgerStore.RunInTransaction(ctx, func(tx storage.BadgerTransaction) error {

		// 5.1 æ„å»ºèµ„æºå…ƒæ•°æ®
		resourceInfo, err := m.buildResourceStorageInfo(contentHash, resourcePath, storagePath, content, metadata)
		if err != nil {
			return fmt.Errorf("æ„å»ºèµ„æºå…ƒæ•°æ®å¤±è´¥: %w", err)
		}

		// 5.2 åºåˆ—åŒ–å…ƒæ•°æ®
		metaData, err := m.serializeResourceInfo(resourceInfo)
		if err != nil {
			return fmt.Errorf("åºåˆ—åŒ–èµ„æºå…ƒæ•°æ®å¤±è´¥: %w", err)
		}

		// 5.3 å†™å…¥å…ƒæ•°æ®åˆ°BadgerDB
		if err := tx.Set([]byte(metaKey), metaData); err != nil {
			return fmt.Errorf("å†™å…¥èµ„æºå…ƒæ•°æ®å¤±è´¥: %w", err)
		}

		// 5.4 å»ºç«‹å“ˆå¸Œâ†’è·¯å¾„æ˜ å°„
		pathKey := resourcePathPrefix + contentHashHex
		if err := tx.Set([]byte(pathKey), []byte(storagePath)); err != nil {
			return fmt.Errorf("å†™å…¥è·¯å¾„æ˜ å°„å¤±è´¥: %w", err)
		}

		// 5.5 åˆå§‹åŒ–å¼•ç”¨è®¡æ•°
		refsKey := resourceRefsPrefix + contentHashHex
		if err := tx.Set([]byte(refsKey), []byte("1")); err != nil {
			return fmt.Errorf("åˆå§‹åŒ–å¼•ç”¨è®¡æ•°å¤±è´¥: %w", err)
		}

		// 5.6 æ›´æ–°åˆ†ç±»ç´¢å¼• (ä½¿ç”¨v2å¹¶å‘ä¼˜åŒ–ç‰ˆæœ¬)
		category := m.extractResourceCategory(resourcePath)
		if err := m.addToCategoryIndexV2(ctx, tx, category, contentHash); err != nil {
			return fmt.Errorf("æ›´æ–°åˆ†ç±»ç´¢å¼•å¤±è´¥: %w", err)
		}

		// 5.7 æ›´æ–°åˆ›å»ºè€…ç´¢å¼• (ä½¿ç”¨v2å¹¶å‘ä¼˜åŒ–ç‰ˆæœ¬)
		if creatorAddress := metadata["creator_address"]; creatorAddress != "" {
			if err := m.addToCreatorIndexV2(ctx, tx, creatorAddress, contentHash); err != nil {
				return fmt.Errorf("æ›´æ–°åˆ›å»ºè€…ç´¢å¼•å¤±è´¥: %w", err)
			}
		}

		// 5.8 æ›´æ–°åç§°ç´¢å¼• (ä½¿ç”¨v2å¹¶å‘ä¼˜åŒ–ç‰ˆæœ¬)
		if resourceName := metadata["name"]; resourceName != "" {
			if err := m.addToNameIndexV2(ctx, tx, resourceName, contentHash); err != nil {
				return fmt.Errorf("æ›´æ–°åç§°ç´¢å¼•å¤±è´¥: %w", err)
			}
		}

		if m.logger != nil {
			m.logger.Debugf("âœ… èµ„æºå­˜å‚¨å®Œæˆ: %s -> %s", resourcePath, contentHashHex)
		}

		return nil
	})

	// 6. å¦‚æœäº‹åŠ¡å¤±è´¥ï¼Œæ¸…ç†å·²å­˜å‚¨çš„æ–‡ä»¶ï¼ˆé˜²æ­¢å­¤å„¿æ–‡ä»¶ï¼‰
	if txErr != nil {
		if cleanupErr := m.fileStore.Delete(ctx, fullStoragePath); cleanupErr != nil {
			if m.logger != nil {
				m.logger.Warnf("æ¸…ç†å­¤å„¿æ–‡ä»¶å¤±è´¥: %s, é”™è¯¯: %v", fullStoragePath, cleanupErr)
			}
		}
		return txErr
	}

	return nil
}

// computeResourceHash è®¡ç®—èµ„æºå†…å®¹å“ˆå¸Œ
//
// ğŸ§® **æµå¼å“ˆå¸Œè®¡ç®—**ï¼š
// - ä½¿ç”¨FileStoreæµå¼è¯»å–ï¼Œé¿å…å¤§æ–‡ä»¶å…¨åŠ è½½
// - SHA-256å“ˆå¸Œè®¡ç®—
// - æ”¯æŒè¶…å¤§æ–‡ä»¶å¤„ç†
func (m *Manager) computeResourceHash(ctx context.Context, resourcePath string) ([]byte, error) {
	// 1. ç»Ÿä¸€è·¯å¾„å¤„ç†
	fullPath := m.buildResourcePath(resourcePath)

	// æ£€æŸ¥æ–‡ä»¶æ˜¯å¦å­˜åœ¨
	exists, err := m.fileStore.Exists(ctx, fullPath)
	if err != nil {
		return nil, fmt.Errorf("æ£€æŸ¥æ–‡ä»¶å­˜åœ¨æ€§å¤±è´¥: %w", err)
	}
	if !exists {
		return nil, fmt.Errorf("èµ„æºæ–‡ä»¶ä¸å­˜åœ¨: %s", resourcePath)
	}

	// 2. ä½¿ç”¨æµå¼è¯»å–è®¡ç®—å“ˆå¸Œ
	stream, err := m.fileStore.OpenReadStream(ctx, fullPath)
	if err != nil {
		return nil, fmt.Errorf("æ‰“å¼€æ–‡ä»¶æµå¤±è´¥: %w", err)
	}
	defer stream.Close()

	// 3. æµå¼SHA-256è®¡ç®—
	hasher := sha256.New()
	_, err = io.Copy(hasher, stream)
	if err != nil {
		return nil, fmt.Errorf("æµå¼å“ˆå¸Œè®¡ç®—å¤±è´¥: %w", err)
	}

	hash := hasher.Sum(nil)

	if m.logger != nil {
		m.logger.Debugf("âœ… èµ„æºå“ˆå¸Œè®¡ç®—å®Œæˆ: %s -> %x", resourcePath, hash)
	}

	return hash, nil
}

// storeResourceStream æµå¼å­˜å‚¨èµ„æºæ–‡ä»¶åŠå…¶å…ƒæ•°æ®
//
// ğŸš€ **å¤§æ–‡ä»¶æµå¼å­˜å‚¨æ ¸å¿ƒå®ç° (Large File Streaming Storage Core Implementation)**
//
// è¿™æ˜¯ä¸“ä¸ºå¤§æ–‡ä»¶è®¾è®¡çš„æµå¼å­˜å‚¨å®ç°ï¼Œè§£å†³äº†ä¼ ç»Ÿæ–¹æ³•çš„å†…å­˜ç“¶é¢ˆé—®é¢˜ã€‚
// é€šè¿‡å·§å¦™çš„ä¸´æ—¶æ–‡ä»¶+æœ€ç»ˆç§»åŠ¨ç­–ç•¥ï¼Œåœ¨ä¿è¯æ•°æ®å®Œæ•´æ€§çš„åŒæ—¶å®ç°å†…å­˜é«˜æ•ˆå¤„ç†ã€‚
//
// ğŸ“‹ **è¯¦ç»†å¤„ç†æµç¨‹**ï¼š
//
//	1ï¸âƒ£ **ä¸´æ—¶æ–‡ä»¶å‡†å¤‡é˜¶æ®µ**ï¼š
//	   â€¢ ç”ŸæˆåŸºäºæ—¶é—´æˆ³çš„ä¸´æ—¶æ–‡ä»¶åï¼ˆé¿å…å†²çªï¼‰
//	   â€¢ ä½¿ç”¨ç»Ÿä¸€è·¯å¾„å¤„ç†å‡½æ•°æ„å»ºå®Œæ•´ä¸´æ—¶è·¯å¾„
//	   â€¢ ä¸ºåç»­æµå¼æ“ä½œåšå¥½å‡†å¤‡
//
//	2ï¸âƒ£ **æµå¼å†™å…¥+å“ˆå¸Œé˜¶æ®µ**ï¼š
//	   â€¢ æ‰“å¼€FileStoreå†™å…¥æµï¼ˆæ”¯æŒå¤§æ–‡ä»¶æµå¼å†™å…¥ï¼‰
//	   â€¢ ä½¿ç”¨io.TeeReaderæŠ€æœ¯åŒæ—¶è¿›è¡Œï¼š
//	     - æ•°æ®æµå¼å†™å…¥ä¸´æ—¶æ–‡ä»¶
//	     - SHA-256å“ˆå¸Œå®æ—¶è®¡ç®—
//	   â€¢ éªŒè¯å®é™…å†™å…¥å¤§å°ä¸é¢„æœŸå¤§å°æ˜¯å¦ä¸€è‡´
//	   â€¢ ä»»ä½•å¼‚å¸¸éƒ½ä¼šè‡ªåŠ¨æ¸…ç†ä¸´æ—¶æ–‡ä»¶
//
//	3ï¸âƒ£ **å»é‡æ£€æŸ¥é˜¶æ®µ**ï¼š
//	   â€¢ å…³é—­å†™å…¥æµï¼Œè·å–æœ€ç»ˆå“ˆå¸Œå€¼
//	   â€¢ æ£€æŸ¥è¯¥å“ˆå¸Œçš„èµ„æºæ˜¯å¦å·²å­˜åœ¨äºç³»ç»Ÿä¸­
//	   â€¢ å¦‚å·²å­˜åœ¨ï¼šæ¸…ç†ä¸´æ—¶æ–‡ä»¶ï¼Œä»…å¢åŠ å¼•ç”¨è®¡æ•°
//	   â€¢ å¦‚ä¸å­˜åœ¨ï¼šç»§ç»­æ‰§è¡Œæ–‡ä»¶ç§»åŠ¨å’Œç´¢å¼•æ›´æ–°
//
//	4ï¸âƒ£ **æ–‡ä»¶ç§»åŠ¨é˜¶æ®µ**ï¼š
//	   â€¢ æ„å»ºåŸºäºå“ˆå¸Œçš„æœ€ç»ˆå­˜å‚¨è·¯å¾„
//	   â€¢ ä½¿ç”¨FileStore.MoveåŸå­æ€§ç§»åŠ¨æ–‡ä»¶
//	   â€¢ é¿å…äº†å¤§æ–‡ä»¶çš„å†æ¬¡å¤åˆ¶ï¼Œæå‡æ€§èƒ½
//	   â€¢ ç§»åŠ¨å¤±è´¥æ—¶è‡ªåŠ¨æ¸…ç†ä¸´æ—¶æ–‡ä»¶
//
//	5ï¸âƒ£ **äº‹åŠ¡ç´¢å¼•é˜¶æ®µ**ï¼š
//	   â€¢ æ„å»ºèµ„æºå…ƒæ•°æ®ï¼ˆä½¿ç”¨å®é™…æ–‡ä»¶å¤§å°ï¼‰
//	   â€¢ åœ¨BadgerDBäº‹åŠ¡ä¸­åŸå­æ€§æ‰§è¡Œï¼š
//	     - åºåˆ—åŒ–å¹¶å†™å…¥èµ„æºå…ƒæ•°æ®
//	     - å»ºç«‹å“ˆå¸Œâ†’è·¯å¾„æ˜ å°„
//	     - åˆå§‹åŒ–å¼•ç”¨è®¡æ•°
//	     - æ›´æ–°v2ç‰ˆæœ¬çš„åˆ†ç±»ã€åˆ›å»ºè€…ã€åç§°ç´¢å¼•
//	   â€¢ è®°å½•æµå¼å­˜å‚¨å®Œæˆçš„æˆåŠŸæ—¥å¿—
//
//	6ï¸âƒ£ **å¼‚å¸¸æ¢å¤é˜¶æ®µ**ï¼š
//	   â€¢ å¦‚æœäº‹åŠ¡å¤±è´¥ï¼Œæ¸…ç†å·²ç§»åŠ¨çš„æœ€ç»ˆæ–‡ä»¶
//	   â€¢ ç¡®ä¿ä¸ä¼šç•™ä¸‹å­¤å„¿æ–‡ä»¶
//	   â€¢ è®°å½•æ¸…ç†æ“ä½œçš„è­¦å‘Šæ—¥å¿—
//
// ğŸ¯ **æ ¸å¿ƒæŠ€æœ¯ä¼˜åŠ¿**ï¼š
//   - ğŸ§  **å†…å­˜æ’å®š**ï¼šæ— è®ºæ–‡ä»¶å¤šå¤§ï¼Œå†…å­˜å ç”¨éƒ½ä¿æŒåœ¨å¸¸æ•°çº§åˆ«
//   - ğŸ“ **æ”¯æŒå·¨å‹æ–‡ä»¶**ï¼šç†è®ºä¸Šæ”¯æŒä»»æ„å¤§å°çš„æ–‡ä»¶ï¼ˆå—å­˜å‚¨é™åˆ¶ï¼‰
//   - ğŸ” **å®Œæ•´æ€§ä¿è¯**ï¼šæµå¼å“ˆå¸Œè®¡ç®—ç¡®ä¿æ•°æ®å®Œæ•´æ€§
//   - âš¡ **æ€§èƒ½ä¼˜å¼‚**ï¼šä¸´æ—¶æ–‡ä»¶+ç§»åŠ¨é¿å…äº†å¤§æ–‡ä»¶çš„é‡å¤è¯»å†™
//   - ğŸ›¡ï¸ **å¼‚å¸¸å®‰å…¨**ï¼šå¤šå±‚å¼‚å¸¸å¤„ç†ç¡®ä¿ä¸ä¼šäº§ç”Ÿåƒåœ¾æ–‡ä»¶
//
// ğŸ’¡ **é€‚ç”¨åœºæ™¯**ï¼š
//   - AIæ¨¡å‹æ–‡ä»¶ï¼ˆé€šå¸¸å‡ GBåˆ°å‡ ç™¾GBï¼‰
//   - å¤§å‹åª’ä½“æ–‡ä»¶ï¼ˆè§†é¢‘ã€éŸ³é¢‘ç­‰ï¼‰
//   - å¤‡ä»½æ–‡ä»¶å’Œå½’æ¡£æ•°æ®
//   - ä»»ä½•éœ€è¦é¿å…å†…å­˜æº¢å‡ºçš„å¤§æ–‡ä»¶å¤„ç†
func (m *Manager) storeResourceStream(ctx context.Context, resourcePath string, reader io.Reader, size int64, metadata map[string]string) error {
	// 1. æ„å»ºåˆ†å±‚å­˜å‚¨è·¯å¾„ï¼ˆä¸´æ—¶è·¯å¾„ï¼Œå› ä¸ºè¿˜ä¸çŸ¥é“å“ˆå¸Œï¼‰
	tempPath := filepath.Join("temp", fmt.Sprintf("upload_%d", time.Now().UnixNano()))
	fullTempPath := m.buildResourcePath(tempPath)

	// 2. æµå¼å†™å…¥å¹¶åŒæ—¶è®¡ç®—å“ˆå¸Œ
	hasher := sha256.New()

	// ä½¿ç”¨æµå¼å†™å…¥åˆ°ä¸´æ—¶æ–‡ä»¶
	writeStream, err := m.fileStore.OpenWriteStream(ctx, fullTempPath)
	if err != nil {
		return fmt.Errorf("æ‰“å¼€å†™å…¥æµå¤±è´¥: %w", err)
	}
	defer writeStream.Close()

	// ä½¿ç”¨TeeReaderåŒæ—¶å†™å…¥æ–‡ä»¶å’Œè®¡ç®—å“ˆå¸Œ
	teeReader := io.TeeReader(reader, hasher)
	actualSize, err := io.Copy(writeStream, teeReader)
	if err != nil {
		// æ¸…ç†ä¸´æ—¶æ–‡ä»¶
		m.fileStore.Delete(ctx, fullTempPath)
		return fmt.Errorf("æµå¼å†™å…¥å¤±è´¥: %w", err)
	}

	// éªŒè¯å¤§å°
	if size > 0 && actualSize != size {
		m.fileStore.Delete(ctx, fullTempPath)
		return fmt.Errorf("æ–‡ä»¶å¤§å°ä¸åŒ¹é…: æœŸæœ› %dï¼Œå®é™… %d", size, actualSize)
	}

	// å…³é—­å†™å…¥æµ
	writeStream.Close()

	// 3. è·å–æœ€ç»ˆå“ˆå¸Œ
	contentHash := hasher.Sum(nil)
	contentHashHex := hex.EncodeToString(contentHash)

	if m.logger != nil {
		m.logger.Debugf("æµå¼èµ„æºå“ˆå¸Œ: %s, è·¯å¾„: %s, å¤§å°: %d", contentHashHex, resourcePath, actualSize)
	}

	// 4. æ£€æŸ¥èµ„æºæ˜¯å¦å·²å­˜åœ¨ï¼ˆå»é‡ï¼‰
	metaKey := resourceMetaPrefix + contentHashHex
	exists, err := m.badgerStore.Exists(ctx, []byte(metaKey))
	if err != nil {
		m.fileStore.Delete(ctx, fullTempPath)
		return fmt.Errorf("æ£€æŸ¥èµ„æºå­˜åœ¨æ€§å¤±è´¥: %w", err)
	}

	if exists {
		// æ¸…ç†ä¸´æ—¶æ–‡ä»¶
		m.fileStore.Delete(ctx, fullTempPath)

		if m.logger != nil {
			m.logger.Debugf("èµ„æºå·²å­˜åœ¨ï¼Œè·³è¿‡å­˜å‚¨: %s", contentHashHex)
		}
		// èµ„æºå·²å­˜åœ¨ï¼Œä»…æ›´æ–°å¼•ç”¨è®¡æ•°
		return m.IncrementResourceReference(ctx, contentHash)
	}

	// 5. ç§»åŠ¨ä¸´æ—¶æ–‡ä»¶åˆ°æœ€ç»ˆä½ç½®
	finalStoragePath := m.buildStoragePath(contentHash, resourcePath)
	finalFullPath := m.buildResourcePath(finalStoragePath)

	if err := m.fileStore.Move(ctx, fullTempPath, finalFullPath); err != nil {
		// å¦‚æœç§»åŠ¨å¤±è´¥ï¼Œæ¸…ç†ä¸´æ—¶æ–‡ä»¶
		m.fileStore.Delete(ctx, fullTempPath)
		return fmt.Errorf("ç§»åŠ¨æ–‡ä»¶åˆ°æœ€ç»ˆä½ç½®å¤±è´¥: %w", err)
	}

	// 6. åœ¨äº‹åŠ¡ä¸­æ‰§è¡Œç´¢å¼•æ“ä½œ
	txErr := m.badgerStore.RunInTransaction(ctx, func(tx storage.BadgerTransaction) error {
		// 6.1 æ„å»ºèµ„æºå…ƒæ•°æ®
		content := make([]byte, actualSize) // è¿™é‡Œç”¨å®é™…å¤§å°ï¼Œä½†ä¸ä¼šçœŸæ­£å­˜å‚¨å†…å®¹
		resourceInfo, err := m.buildResourceStorageInfo(contentHash, resourcePath, finalStoragePath, content, metadata)
		if err != nil {
			return fmt.Errorf("æ„å»ºèµ„æºå…ƒæ•°æ®å¤±è´¥: %w", err)
		}

		// æ›´æ–°å®é™…å¤§å°
		resourceInfo.Size = actualSize

		// 6.2 åºåˆ—åŒ–å…ƒæ•°æ®
		metaData, err := m.serializeResourceInfo(resourceInfo)
		if err != nil {
			return fmt.Errorf("åºåˆ—åŒ–èµ„æºå…ƒæ•°æ®å¤±è´¥: %w", err)
		}

		// 6.3 å†™å…¥å…ƒæ•°æ®åˆ°BadgerDB
		if err := tx.Set([]byte(metaKey), metaData); err != nil {
			return fmt.Errorf("å†™å…¥èµ„æºå…ƒæ•°æ®å¤±è´¥: %w", err)
		}

		// 6.4 å»ºç«‹å“ˆå¸Œâ†’è·¯å¾„æ˜ å°„
		pathKey := resourcePathPrefix + contentHashHex
		if err := tx.Set([]byte(pathKey), []byte(finalStoragePath)); err != nil {
			return fmt.Errorf("å†™å…¥è·¯å¾„æ˜ å°„å¤±è´¥: %w", err)
		}

		// 6.5 åˆå§‹åŒ–å¼•ç”¨è®¡æ•°
		refsKey := resourceRefsPrefix + contentHashHex
		if err := tx.Set([]byte(refsKey), []byte("1")); err != nil {
			return fmt.Errorf("åˆå§‹åŒ–å¼•ç”¨è®¡æ•°å¤±è´¥: %w", err)
		}

		// 6.6 æ›´æ–°æ–°å‹ç´¢å¼•ï¼ˆper-itemé”®è®¾è®¡ï¼‰
		category := m.extractResourceCategory(resourcePath)
		if err := m.addToCategoryIndexV2(ctx, tx, category, contentHash); err != nil {
			return fmt.Errorf("æ›´æ–°åˆ†ç±»ç´¢å¼•å¤±è´¥: %w", err)
		}

		// 6.7 æ›´æ–°åˆ›å»ºè€…ç´¢å¼•
		if creatorAddress := metadata["creator_address"]; creatorAddress != "" {
			if err := m.addToCreatorIndexV2(ctx, tx, creatorAddress, contentHash); err != nil {
				return fmt.Errorf("æ›´æ–°åˆ›å»ºè€…ç´¢å¼•å¤±è´¥: %w", err)
			}
		}

		// 6.8 æ›´æ–°åç§°ç´¢å¼•
		if resourceName := metadata["name"]; resourceName != "" {
			if err := m.addToNameIndexV2(ctx, tx, resourceName, contentHash); err != nil {
				return fmt.Errorf("æ›´æ–°åç§°ç´¢å¼•å¤±è´¥: %w", err)
			}
		}

		if m.logger != nil {
			m.logger.Debugf("âœ… æµå¼èµ„æºå­˜å‚¨å®Œæˆ: %s -> %s", resourcePath, contentHashHex)
		}

		return nil
	})

	// 7. å¦‚æœäº‹åŠ¡å¤±è´¥ï¼Œæ¸…ç†å·²å­˜å‚¨çš„æ–‡ä»¶
	if txErr != nil {
		if cleanupErr := m.fileStore.Delete(ctx, finalFullPath); cleanupErr != nil {
			if m.logger != nil {
				m.logger.Warnf("æ¸…ç†å­¤å„¿æ–‡ä»¶å¤±è´¥: %s, é”™è¯¯: %v", finalFullPath, cleanupErr)
			}
		}
		return txErr
	}

	return nil
}

// ============================================================================
//                              ğŸ”§ è¾…åŠ©å‡½æ•°
// ============================================================================

// buildResourcePath æ„å»ºèµ„æºå­˜å‚¨è·¯å¾„
//
// ğŸ›£ï¸ **æ¶æ„åˆè§„çš„è·¯å¾„å¤„ç†**ï¼š
// - ä¸å†ä¾èµ–resourceBasePathï¼Œè·¯å¾„ç”±FileStoreç®¡ç†
// - ç›´æ¥è¿”å›ç›¸å¯¹è·¯å¾„ä¾›FileStoreä½¿ç”¨
// - éµå¾ªåˆ†å±‚æ¶æ„åŸåˆ™
func (m *Manager) buildResourcePath(path string) string {
	// ç›´æ¥è¿”å›ç›¸å¯¹è·¯å¾„ï¼Œç”±FileStoreè´Ÿè´£è·¯å¾„ç®¡ç†
	return path
}

// buildStoragePath æ„å»ºåˆ†å±‚å­˜å‚¨è·¯å¾„
//
// ğŸ—‚ï¸ **æ™ºèƒ½åˆ†å±‚å­˜å‚¨è·¯å¾„ç”Ÿæˆ (Intelligent Hierarchical Storage Path Generation)**
//
// æ ¹æ®èµ„æºå“ˆå¸Œå’Œè·¯å¾„ä¿¡æ¯æ„å»ºä¼˜åŒ–çš„æ–‡ä»¶ç³»ç»Ÿå­˜å‚¨è·¯å¾„ï¼Œé‡‡ç”¨ä¸‰çº§ç›®å½•ç»“æ„
// æœ‰æ•ˆè§£å†³å¤§é‡æ–‡ä»¶å­˜å‚¨æ—¶çš„æ–‡ä»¶ç³»ç»Ÿæ€§èƒ½é—®é¢˜ã€‚
//
// ğŸ“‹ **è·¯å¾„æ„å»ºè§„åˆ™**ï¼š
//
//	ğŸ¯ **ä¸‰çº§ç»“æ„**: {category}/{hash[0:2]}/{full_hash}
//
//	ç¤ºä¾‹è·¯å¾„ï¼š
//	- static/ab/abcdef123456789...     (é™æ€èµ„æº)
//	- contract/12/123456789abcdef...   (æ™ºèƒ½åˆçº¦)
//	- aimodel/ef/efghijk789012345...   (AIæ¨¡å‹)
//
// ğŸš€ **è®¾è®¡ä¼˜åŠ¿**ï¼š
//
//	âœ… **æ–‡ä»¶ç³»ç»Ÿä¼˜åŒ–**ï¼š
//	   â€¢ é¿å…å•ç›®å½•æ–‡ä»¶è¿‡å¤šå¯¼è‡´çš„æ€§èƒ½ä¸‹é™
//	   â€¢ ä¸‰çº§ç»“æ„æœ€å¤šæ¯å±‚256ä¸ªå­ç›®å½•ï¼Œæ€§èƒ½æœ€ä¼˜
//	   â€¢ æ”¯æŒæµ·é‡æ–‡ä»¶çš„é«˜æ•ˆå­˜å‚¨å’Œè®¿é—®
//
//	âœ… **æŸ¥æ‰¾æ•ˆç‡**ï¼š
//	   â€¢ æ ¹æ®å“ˆå¸Œå€¼å¯ç›´æ¥å®šä½åˆ°å…·ä½“æ–‡ä»¶
//	   â€¢ ç›®å½•éå†å±‚æ•°å›ºå®šï¼Œæ—¶é—´å¤æ‚åº¦O(1)
//	   â€¢ å‡å°‘æ–‡ä»¶ç³»ç»Ÿå…ƒæ•°æ®çš„å†…å­˜å ç”¨
//
//	âœ… **æ‰©å±•æ€§å¼º**ï¼š
//	   â€¢ æ”¯æŒä»»æ„æ•°é‡çš„æ–‡ä»¶å­˜å‚¨
//	   â€¢ æ–°å¢èµ„æºç±»å‹æ— éœ€ä¿®æ”¹å­˜å‚¨ç»“æ„
//	   â€¢ ä¾¿äºå¤‡ä»½å’Œæ•°æ®è¿ç§»æ“ä½œ
//
// ğŸ”„ **å¤„ç†æµç¨‹**ï¼š
//  1. å°†å“ˆå¸Œå€¼è½¬æ¢ä¸ºåå…­è¿›åˆ¶å­—ç¬¦ä¸²è¡¨ç¤º
//  2. ä»èµ„æºè·¯å¾„ä¸­æå–å¹¶æ ‡å‡†åŒ–åˆ†ç±»ä¿¡æ¯
//  3. å–å“ˆå¸Œå‰2ä½ä½œä¸ºäºŒçº§ç›®å½•ï¼ˆå®ç°æ–‡ä»¶åˆ†ç‰‡ï¼‰
//  4. ç»„åˆç”Ÿæˆæœ€ç»ˆçš„ä¸‰çº§ç›®å½•è·¯å¾„
//
// ğŸ’¡ **é€‚ç”¨åœºæ™¯**ï¼š
//   - æ‰€æœ‰ç±»å‹èµ„æºçš„ç‰©ç†å­˜å‚¨è·¯å¾„ç”Ÿæˆ
//   - æ–‡ä»¶ç³»ç»Ÿæ€§èƒ½ä¼˜åŒ–
//   - å¤§è§„æ¨¡æ–‡ä»¶å­˜å‚¨çš„ç›®å½•è§„åˆ’
func (m *Manager) buildStoragePath(contentHash []byte, resourcePath string) string {
	hashHex := hex.EncodeToString(contentHash)

	// æå–èµ„æºç±»å‹ä½œä¸ºä¸€çº§ç›®å½•
	category := m.extractResourceCategory(resourcePath)

	// ä½¿ç”¨å“ˆå¸Œå‰2ä½ä½œä¸ºäºŒçº§ç›®å½•ï¼ˆåˆ†ç‰‡ï¼‰
	hashPrefix := hashHex[:2]

	// æ„å»ºæœ€ç»ˆè·¯å¾„
	return filepath.Join(category, hashPrefix, hashHex)
}

// extractResourceCategory ä»èµ„æºè·¯å¾„æå–åˆ†ç±»
func (m *Manager) extractResourceCategory(resourcePath string) string {
	// ä»èµ„æºè·¯å¾„æå–åˆ†ç±»ä¿¡æ¯
	parts := strings.Split(resourcePath, "/")
	if len(parts) > 0 {
		// æ ¹æ®protobufå®šä¹‰çš„èµ„æºç±»å‹
		switch strings.ToLower(parts[0]) {
		case "static":
			return "static"
		case "contract", "executable":
			return "contract"
		case "aimodel", "model":
			return "aimodel"
		default:
			return "unknown"
		}
	}
	return "unknown"
}

// buildResourceStorageInfo æ„å»ºèµ„æºå­˜å‚¨ä¿¡æ¯
//
// ğŸ—ï¸ **èµ„æºå­˜å‚¨ä¿¡æ¯æ„å»ºå™¨ (Resource Storage Info Builder)**
//
// å°†åˆ†æ•£çš„èµ„æºæ•°æ®ç»Ÿä¸€å°è£…ä¸ºæ ‡å‡†åŒ–çš„ResourceStorageInfoç»“æ„ï¼Œ
// ä¸ºåç»­çš„åºåˆ—åŒ–å­˜å‚¨å’ŒæŸ¥è¯¢è¿”å›æä¾›ä¸€è‡´çš„æ•°æ®æ ¼å¼ã€‚
//
// ğŸ“‹ **ä¿¡æ¯æ„å»ºæµç¨‹**ï¼š
//
//	1ï¸âƒ£ **åŸºç¡€ä¿¡æ¯è®¾ç½®**ï¼š
//	   â€¢ è®¾ç½®èµ„æºè·¯å¾„ã€ç±»å‹ã€å“ˆå¸Œã€å¤§å°ç­‰æ ¸å¿ƒå±æ€§
//	   â€¢ è®°å½•å­˜å‚¨æ—¶é—´æˆ³å’Œå¯ç”¨çŠ¶æ€
//	   â€¢ æŒ‡å®šå­˜å‚¨åç«¯ç±»å‹ï¼ˆhybrid_storeï¼‰
//
//	2ï¸âƒ£ **å…ƒæ•°æ®å¤„ç†**ï¼š
//	   â€¢ å¤åˆ¶ç”¨æˆ·æä¾›çš„è‡ªå®šä¹‰å…ƒæ•°æ®
//	   â€¢ æ·»åŠ ç³»ç»Ÿç”Ÿæˆçš„æŠ€æœ¯å…ƒæ•°æ®ï¼š
//	     - storage_path: ç‰©ç†å­˜å‚¨è·¯å¾„
//	     - content_hash_hex: å“ˆå¸Œçš„åå…­è¿›åˆ¶è¡¨ç¤º
//	     - stored_at_rfc3339: RFC3339æ ¼å¼çš„å­˜å‚¨æ—¶é—´
//
//	3ï¸âƒ£ **æ•°æ®å®Œæ•´æ€§**ï¼š
//	   â€¢ ç¡®ä¿æ‰€æœ‰å¿…è¦å­—æ®µéƒ½è¢«æ­£ç¡®å¡«å……
//	   â€¢ ç»Ÿä¸€æ—¶é—´æ ¼å¼å’Œç¼–ç æ ‡å‡†
//	   â€¢ ä¸ºç©ºå…ƒæ•°æ®æ˜ å°„åˆå§‹åŒ–é»˜è®¤å€¼
//
// ğŸ¯ **ç”Ÿæˆçš„ä¿¡æ¯åŒ…å«**ï¼š
//   - ResourcePath: èµ„æºçš„é€»è¾‘è®¿é—®è·¯å¾„
//   - ResourceType: è‡ªåŠ¨è¯†åˆ«çš„èµ„æºåˆ†ç±»
//   - ContentHash: SHA-256å†…å®¹å“ˆå¸Œå€¼
//   - Size: å‡†ç¡®çš„æ–‡ä»¶å­—èŠ‚å¤§å°
//   - StoredAt: Unixæ—¶é—´æˆ³æ ¼å¼çš„å­˜å‚¨æ—¶é—´
//   - Metadata: åŒ…å«ç”¨æˆ·å’Œç³»ç»Ÿå…ƒæ•°æ®çš„å®Œæ•´æ˜ å°„
//   - IsAvailable: åˆå§‹è®¾ç½®ä¸ºtrueï¼ˆå¯ç”¨çŠ¶æ€ï¼‰
//   - StorageBackend: æ ‡è¯†ä¸º"hybrid_store"æ··åˆå­˜å‚¨
//
// ğŸ”§ **å…ƒæ•°æ®å¢å¼º**ï¼š
//
//	ç³»ç»Ÿè‡ªåŠ¨æ·»åŠ ä»¥ä¸‹æŠ€æœ¯å…ƒæ•°æ®ï¼š
//	- storage_path: ä¾¿äºç›´æ¥æ–‡ä»¶è®¿é—®
//	- content_hash_hex: ä¾¿äºè°ƒè¯•å’ŒéªŒè¯
//	- stored_at_rfc3339: æ ‡å‡†æ—¶é—´æ ¼å¼ï¼Œä¾¿äºè§£æ
//
// ğŸ’¡ **ä½¿ç”¨åœºæ™¯**ï¼š
//   - æ–°èµ„æºå­˜å‚¨æ—¶çš„ä¿¡æ¯å°è£…
//   - èµ„æºä¿¡æ¯çš„æ ‡å‡†åŒ–å¤„ç†
//   - å…ƒæ•°æ®çš„ç»Ÿä¸€ç®¡ç†å’Œæ‰©å±•
func (m *Manager) buildResourceStorageInfo(contentHash []byte, resourcePath, storagePath string, content []byte, metadata map[string]string) (*types.ResourceStorageInfo, error) {
	now := time.Now()

	// æ„å»ºåŸºç¡€å­˜å‚¨ä¿¡æ¯
	storageInfo := &types.ResourceStorageInfo{
		ResourcePath:   resourcePath,
		ResourceType:   m.extractResourceCategory(resourcePath),
		ContentHash:    contentHash,
		Size:           int64(len(content)),
		StoredAt:       now.Unix(),
		Metadata:       metadata,
		IsAvailable:    true,
		StorageBackend: "hybrid_store", // FileStore + BadgerStoreæ··åˆå­˜å‚¨
	}

	// å¦‚æœæœ‰å…ƒæ•°æ®ï¼Œæ·»åŠ å­˜å‚¨è·¯å¾„ä¿¡æ¯
	if storageInfo.Metadata == nil {
		storageInfo.Metadata = make(map[string]string)
	}
	storageInfo.Metadata["storage_path"] = storagePath
	storageInfo.Metadata["content_hash_hex"] = hex.EncodeToString(contentHash)
	storageInfo.Metadata["stored_at_rfc3339"] = now.Format(time.RFC3339)

	return storageInfo, nil
}

// serializeResourceInfo åºåˆ—åŒ–èµ„æºä¿¡æ¯
//
// ğŸ’¾ **åºåˆ—åŒ–æ ¼å¼**ï¼š
// ä½¿ç”¨ç®€å•çš„é”®å€¼å¯¹æ ¼å¼ï¼Œä¾¿äºè¯»å–å’Œè°ƒè¯•
func (m *Manager) serializeResourceInfo(info *types.ResourceStorageInfo) ([]byte, error) {
	var lines []string

	// åŸºç¡€ä¿¡æ¯
	lines = append(lines, fmt.Sprintf("resource_path=%s", info.ResourcePath))
	lines = append(lines, fmt.Sprintf("resource_type=%s", info.ResourceType))
	lines = append(lines, fmt.Sprintf("content_hash=%x", info.ContentHash))
	lines = append(lines, fmt.Sprintf("size=%d", info.Size))
	lines = append(lines, fmt.Sprintf("stored_at=%d", info.StoredAt))
	lines = append(lines, fmt.Sprintf("is_available=%t", info.IsAvailable))
	lines = append(lines, fmt.Sprintf("storage_backend=%s", info.StorageBackend))

	// å…ƒæ•°æ®ä¿¡æ¯
	if len(info.Metadata) > 0 {
		lines = append(lines, "# Metadata")
		for key, value := range info.Metadata {
			lines = append(lines, fmt.Sprintf("meta.%s=%s", key, value))
		}
	}

	content := strings.Join(lines, "\n")
	return []byte(content), nil
}

// deserializeResourceInfo ååºåˆ—åŒ–èµ„æºä¿¡æ¯
func (m *Manager) deserializeResourceInfo(data []byte) (*types.ResourceStorageInfo, error) {
	info := &types.ResourceStorageInfo{
		Metadata: make(map[string]string),
	}

	lines := strings.Split(string(data), "\n")
	for _, line := range lines {
		line = strings.TrimSpace(line)
		if line == "" || strings.HasPrefix(line, "#") {
			continue
		}

		parts := strings.SplitN(line, "=", 2)
		if len(parts) != 2 {
			continue
		}

		key, value := parts[0], parts[1]

		switch key {
		case "resource_path":
			info.ResourcePath = value
		case "resource_type":
			info.ResourceType = value
		case "content_hash":
			hash, err := hex.DecodeString(value)
			if err != nil {
				return nil, fmt.Errorf("è§£æcontent_hashå¤±è´¥: %w", err)
			}
			info.ContentHash = hash
		case "size":
			var size int64
			if _, err := fmt.Sscanf(value, "%d", &size); err != nil {
				return nil, fmt.Errorf("è§£æsizeå¤±è´¥: %w", err)
			}
			info.Size = size
		case "stored_at":
			var storedAt int64
			if _, err := fmt.Sscanf(value, "%d", &storedAt); err != nil {
				return nil, fmt.Errorf("è§£æstored_atå¤±è´¥: %w", err)
			}
			info.StoredAt = storedAt
		case "is_available":
			var available bool
			if _, err := fmt.Sscanf(value, "%t", &available); err != nil {
				return nil, fmt.Errorf("è§£æis_availableå¤±è´¥: %w", err)
			}
			info.IsAvailable = available
		case "storage_backend":
			info.StorageBackend = value
		default:
			// å¤„ç†å…ƒæ•°æ®
			if strings.HasPrefix(key, "meta.") {
				metaKey := strings.TrimPrefix(key, "meta.")
				info.Metadata[metaKey] = value
			}
		}
	}

	return info, nil
}
